Tue Sep 14 13:35:26 2004  Tim Janik  <timj@gtk.org>

	* beast-gtk/bstparam-automation.c: new parameter type, to adjust 
	automation settings of a property.

	* beast-gtk/bstparam.[hc]: introduce bst_param_new_value() which
	wraps bst_param_new_value(), but also enables size grouping for
	the parameter editors.
	bst_param_create_gmask(): create automation editor for :automate:
	properties.

	* beast-gtk/gxk/gxkparam.[hc]: support temorary GUI readonly flag.

	* beast-gtk/gxk/gxkutils.[hc]:
	gxk_widget_proxy_requisition(): request extra vscrollbar space only if
	horizontal downscaling is disabled. same for vertical dimension.
	gxk_scrolled_window_create(): removed useless argument changed callers.

Mon Sep 13 21:52:07 2004  Tim Janik  <timj@gtk.org>

	* beast-gtk/gxk/gxkutils.[hc]: removed gxk_object_derive(), a suitable
	replacement is provided by G_DEFINE_TYPE(), fixed callers.

Mon Sep 13 21:24:40 2004  Tim Janik  <timj@gtk.org>

	* docs/beast-index.texi: document list and link list updates.

	* beast-gtk/bstapp.[hc]: help menu revamp, and other menu improvements.

	* beast-gtk/dialogs/radgets-beast.xml: BstApp menu adaptions.

	* beast-gtk/gxk/gxktexttools.c: open external web browser when links
	are activated that use the protocols: http, https, ftp or mailto.

	* beast-gtk/gxk/gxkutils.[hc]: added gxk_show_url(), a function to
	invoke an external web browser.

Mon Sep 13 14:10:21 2004  Tim Janik  <timj@gtk.org>

	* data/beast.desktop.in: added mime type for audio/x-bse and
	audio/x-bsewave, pointed out by Artem Popov.

Sun Sep 12 03:35:46 2004  Tim Janik  <timj@gtk.org>

	* beast-gtk/bstparamview.c:
	* beast-gtk/bstpreferences.c: changed layouts to use 
	gxk_scrolled_window_create().

	* beast-gtk/bsttracksynthdialog.c:
	* beast-gtk/bstitemseqdialog.c:
	* beast-gtk/bstpartdialog.c:
	* beast-gtk/bstfiledialog.c:
	* beast-gtk/bstapp.c: adjusted dialog sizes, constrained to screen size.

	* beast-gtk/bsteventroll.c: adjusted height requisition.
